--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "frameworks"]
 	path = frameworks
-	url = git@gitlab.eumetsat.int:eumetlab/oceans/ocean-training/tools/frameworks.git
+	url = https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/tools/frameworks.git
 [submodule "working-with-python"]
 	path = working-with-python
-	url = git@gitlab.eumetsat.int:eumetlab/oceans/ocean-training/tools/working-with-python.git
+	url = https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/tools/working-with-python.git
