--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "frameworks"]
 	path = frameworks
 	url = https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/tools/frameworks.git
+	branch = main
 [submodule "working-with-python"]
 	path = working-with-python
 	url = https://gitlab.eumetsat.int/eumetlab/oceans/ocean-training/tools/working-with-python.git
+    branch = main
