--- a/environment.yml
+++ b/environment.yml
@@ -1,3 +1,5 @@
+# copyright: 2022 EUMETSAT
+# license: LICENSE.txt
 name: cmts_ocean_case_studies
 channels:
   - conda-forge
@@ -15,4 +17,4 @@ dependencies:
   - conda-forge::bokeh
   - cmts::hda
   - cmts::eumartools
-  - eumetsat::eumdac
+  - cmts::eumdac
