--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@ Case_studies/**/*.png
 !OSTIA_SST.nc
 !S3A_SL_2_WST____20211222T123736_20211222T141835_20211223T225541_6059_080_066______MAR_O_NT_003_subset.nc
 !S3B_SL_2_WST____20211222T115815_20211222T133915_20211223T224804_6059_060_308______MAR_O_NT_003_subset.nc
+# UNOD Challenge05
+!S3B_OLCI_EFR_20220713T100610_L2_OC_reduced.nc
 # UNOD Challenge06
 !SWH_animation_FREDDY.mp4
 # Altimetry topo
